@@ -1,3 +1,7 @@
+2014-07-04  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
+
+	* texmfmp.c: Remove redundant cpp macros (w32 only).
+
 2014-06-20  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
 
 	* texmfmp.c: Support short-file-name convention (w32 only).
